objects/nPortal__Field_Extension__c.object
<CustomObject>
    <description>--DEPRECATED-- Extends a field for the given object. Optionally tied to Routes.</description>
    <fields>
        <fullName>nPortal__Alternate_Label__c</fullName>
        <description>Replacement label text or a question referencing the extended field.</description>
        <label>Alternate Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nPortal__Field_Name__c</fullName>
        <description>The name of the field being extended.</description>
        <label>Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nPortal__Format_Description__c</fullName>
        <description>A description of the logic applied in the format expression to aid in understanding what input is accepted.</description>
        <inlineHelpText>Describe the format expression used to indicate what types of inputs are acceptable.</inlineHelpText>
        <label>Format Rule Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nPortal__Format_Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Determines whether or not the defined Format Expression will be enforced for this field.</description>
        <inlineHelpText>If unchecked, the rule defined for Format Expression will not be applied.</inlineHelpText>
        <label>Format Validation Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nPortal__Format_Expression__c</fullName>
        <description>A regular expression for validating the format of this field. If specified, the UI will enforce contents matching the format specified and provide a specified error message if the format is not matched.</description>
        <inlineHelpText>Enter an optional regular expression for enforcing a particular format for the field&apos;s contents.</inlineHelpText>
        <label>Format Expression</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nPortal__Format_Message__c</fullName>
        <description>The error message to display to the user when a field does not match the format expression specified.</description>
        <inlineHelpText>Enter a message to display to the user when their input does not match the format specified in Format Expression.</inlineHelpText>
        <label>Format Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nPortal__Route__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to a Route. If none is specified the field extension can be applied everywhere.</description>
        <inlineHelpText>Specify the Route that this field extension will apply to, otherwise the field extension will be applied everywhere.</inlineHelpText>
        <label>Route</label>
        <referenceTo>nFORCE__Route__c</referenceTo>
        <relationshipLabel>Field Extension Route</relationshipLabel>
        <relationshipName>Field_Ext_Route</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nPortal__SLDS_Column_Size__c</fullName>
        <description>The size of the column used for this field in the SLDS Grid. This number is the denominator of the fraction 1/x that gives the percentage of the row the field&apos;s column will span.</description>
        <inlineHelpText>Specify the size of the SLDS Grid column this field should span. This number will be divided into 1 to give the percentage of the row the field will span. For example, a value of 3 will equate to 33.333% of the row.</inlineHelpText>
        <label>SLDS Grid Column Size</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nPortal__Tooltip_Contents__c</fullName>
        <description>Contents of a tooltip displayed on Customer Portal after expanding the tooltip text</description>
        <label>Tooltip Contents</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nPortal__Tooltip_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether or not a tooltip will be displayed for the given field in Customer Portal.</description>
        <inlineHelpText>Check this field to enable a tooltip for the given field in Customer Portal.</inlineHelpText>
        <label>Tooltip Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nPortal__Tooltip_Text__c</fullName>
        <description>Custom help text displayed on Customer Portal for a particular field.</description>
        <label>Tooltip Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nPortal__lookupKey__c</fullName>
        <description>The field is optional. If populated the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm.</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>nPortal__sObject_Name__c</fullName>
        <description>The object to which an extended field belongs.</description>
        <label>sObject Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>-D Field Extension</label>
    <nameField>
        <displayFormat>FX{0000}</displayFormat>
        <label>Field Extension Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>-D Field Extensions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>